# FaceRecognition

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
apps/api/: main.cpp
apps/cli/: main.cpp
include/application/: face_dataset_loader.hpp  image_reader.hpp  recognition_result.hpp  recognition_service.hpp
include/core/: face_embedding.hpp  helper.hpp  image_data.hpp  in_memory_face_repository.hpp  nearest_neighbor_matcher.hpp  pca_model.hpp
include/imageDecoder/: delegating_image_reader.hpp  image_folder_dataset_loader.hpp  image_reader.hpp  jpeg_image_reader.hpp  pgm_image_reader.hpp  png_image_reader.hpp  stb_image_decoder.hpp
include/interfaces/rest/: rest_controller.hpp  rest_server.hpp
include/model/: face_dataset_loader.hpp  face_repository.hpp  face_sample.hpp  in_memory_face_repository.hpp
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
src/application/: recognition_service.cpp
src/core/: face_embedding.cpp  in_memory_face_repository.cpp  nearest_neighbor_matcher.cpp  pca_model.cpp
src/imageDecoder/: delegating_image_reader.cpp  image_folder_dataset_loader.cpp  jpeg_image_reader.cpp  pgm_image_reader.cpp  png_image_reader.cpp  stb_image_decoder.cpp
src/interfaces/rest/: rest_controller.cpp  rest_server.cpp
